...
    <item name="lcd105" type="id"/>
    <item name="lcd106" type="id"/>
    <item name="lcd107" type="id"/>
    <item name="lcd108" type="id"/>
    <item name="lcd109" type="id"/>

    <item name="mem_file_name" type="id"/>

</resources>

